--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>1.6.2</version>
+        <scope>test</scope>
+    </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
