--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,13 +1,11 @@
 #JDBC properties
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-<<<<<<< HEAD
-=======
 
->>>>>>> ypi-backend
+
 jdbc.url=jdbc:mysql://localhost:3306/ypi
-jdbc.user=root
-jdbc.pass=Whan5201314!
+jdbc.user=hbstudent
+jdbc.pass=hbstudent
 
 
 
