--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,14 +1,9 @@
 #JDBC properties
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 2a2f0e439331926d621be02022d2deb37a187e0a
 jdbc.url=jdbc:mysql://localhost:3306/ypi
-jdbc.user=hbstudent
-jdbc.pass=hbstudent
+jdbc.user=root
+jdbc.pass=Whan5201314!
 
 
 
